--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,23 +12,28 @@
     "format": "prettier --write --ignore-path=../../.prettierignore ."
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "classnames": "^2.3.2",
+    "flowbite": "^1.6.3",
+    "i": "^0.3.7",
+    "npm": "^9.5.0",
     "ui": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "latest",
     "@sveltejs/kit": "latest",
+    "autoprefixer": "^10.4.7",
     "eslint-config-custom": "workspace:*",
     "flowbite-svelte": "^0.30.4",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
     "tslib": "^2.3.1",
     "typescript": "^4.7.2",
-    "vite": "^4.0.0",
-    "postcss": "^8.4.14",
-    "postcss-load-config": "^4.0.1",
-    "autoprefixer": "^10.4.7",
-    "tailwindcss": "^3.1.5"
+    "vite": "^4.0.0"
   },
   "type": "module"
 }
