--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,32 +3,41 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite dev --port 3000 --open",
+    "dev:host": "vite dev --port 3000 --host --open",
     "build": "vite build",
     "package": "vite package",
     "preview": "vite preview",
+    "preview:host": "vite preview --host",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --ignore-path=../../.prettierignore . && eslint \"src\"",
     "format": "prettier --write --ignore-path=../../.prettierignore ."
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "classnames": "^2.3.2",
+    "db": "workspace:*",
+    "flowbite": "^1.6.3",
+    "typeorm": "0.3.12",
+    "typeorm-extension": "^2.5.2",
     "ui": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "latest",
     "@sveltejs/kit": "latest",
+    "autoprefixer": "^10.4.7",
     "eslint-config-custom": "workspace:*",
     "flowbite-svelte": "^0.30.4",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.3.1",
-    "typescript": "^4.7.2",
-    "vite": "^4.0.0",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
-    "autoprefixer": "^10.4.7",
-    "tailwindcss": "^3.1.5"
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.7.1",
+    "svelte-heros-v2": "^0.3.21",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
+    "tslib": "^2.3.1",
+    "typescript": "^4.7.2",
+    "vite": "^4.0.0"
   },
   "type": "module"
 }
